--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
     <main class="container">
       <section class="about">
-        <a href="/"><img src="https://raw.githubusercontent.com/ankouichi/ankouichi.github.io/master/assets/portfolio.JPG" 
+        <a href="/"><img src="https://raw.githubusercontent.com/ankouichi/ankouichi.github.io/master/assets/portfolio.png" 
           alt="{{ site.plainwhite.name }}"></a>
         <h2 id="title">
           <a href="/">{{ site.plainwhite.name }}</a>
